2010-04-20  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c, misc/openvas_auth.h
	(openvas_auth_store_user_rules): Moved from
	openvas-administrator/src/admin module.

2010-04-20  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* base/openvas_string.c: Added missing include, updated copyright.

2010-04-20  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Created new module for file based utility functions, moved some
	functions from openvas-administrator into it.
	Also, abort build of libopenvas_base library on compiler warnings.

	* base/openvas_file.c, base/openvas_file.h
	(openvas_file_remove_recurse, openvas_file_check_is_dir): Added new
	module with utility functions moved from
	openvas-administrator/src/admin.c .

	* MANIFEST: Added new files.

	* base/CMakeLists.txt: Added new files, pass -Werror to compiler as in
	other new modules.

2010-04-19  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* misc/openvas_auth.c (is_user_admin): Added todo (wrt remote auth).
	(openvas_auth_user_rules): Fixed call with double pointer.

2010-04-19  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Improved support for ldap based authentication. Therefore expect the
	configuration to hold the name of an attribute and possible values to
	qualify a login as user or administrator. Deny access if the attribute
	is not found in the ldap directory or does not have the specified
	values. Do this in every ldap authentication trial. Access rules
	support (which was prepared) will work similar. Kept the module chatty
	for debugging purpose. Note that to test, you have to enable LDAP
	support during build time.

	* misc/ldap_auth.h, misc/ldap_auth.c (ldap_auth_info_new)
	(ldap_auth_info_free, ldap_auth_info_from_key_file, ldap_authenticate,
	(ldap_auth_query_role): Added preliminary support for access rules,
	added support for user roles.

	* doc/example.auth.conf: Made role-user-values a semicolon separated
	list.
