@@ -1,5 +1,10 @@
 2010-04-20  Felix Wolfsteller <felix.wolfsteller@greenbone.net>
 
+	* misc/openvas_auth.c (openvas_auth_store_user_rules): Documented. Do
+	not delete users dir in error case. Return proper.
+
+2010-04-20  Felix Wolfsteller <felix.wolfsteller@greenbone.net>
+
 	* misc/openvas_auth.c, misc/openvas_auth.h
 	(openvas_auth_store_user_rules): Moved from
 	openvas-administrator/src/admin module.
